--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit==1.30.0
-librosa==0.10.1
-numpy<2.0.0
-pandas>=2.0.0
-plotly>=5.15.0
-soundfile>=0.12.1
+streamlit
+librosa
+numpy
+pandas
+plotly
+streamlit-webrtc
+soundfile
+resampy
